--- a/Class_2/style.css
+++ b/Class_2/style.css
@@ -89,13 +89,14 @@ body {
     color: whitesmoke;
     text-shadow: 0px 0px 10px rgb(255, 107, 1);
     padding: 1rem;
+    font-weight: 400;
 }
 button{
-    background-color: rgb(255, 107, 1);
+    background-color: var(--orange);
     padding: 0.5rem 1rem;
     border-radius: 0.25rem;
     border: none;
-    color: whitesmoke;
+    color: var(--white);
 }
 button:hover{
     background-color: rgba(255, 107, 1,0.9);
